repeatable crash in uploaded blend file on changing Screens. #38295

Closed
opened 2014-01-20 20:59:06 +01:00 by bassam kurdali · 10 comments
Member

System Information
fedora 20 GNU/Linux 64 bit, intel cpu, nvidia gpu (multiple machines)

Blender Version
Broken: buildbot build 7436a3f and current git
Worked: hash 18a1e17 (own build)

Short description of error
At some point between the two build (I believe both are mt?) this file started crashing a lot. some crashes feel random, but a repeatable one is to try changing the screen.

Exact steps for others to reproduce the error

  • so, load the attached .blend file
  • it opens two windows. one has an info header in the top. go to that window
  • in the info menu header, go to the Screens dropdown and try changing the screen to animation.
  • if it goes well, it should crash like mine.

the attached file is uploaded instead to http://urchn.org/misc/a1s51packed.blend
thanks!!

**System Information** fedora 20 GNU/Linux 64 bit, intel cpu, nvidia gpu (multiple machines) **Blender Version** Broken: buildbot build 7436a3f and current git Worked: hash 18a1e17 (own build) **Short description of error** At some point between the two build (I believe both are mt?) this file started crashing a lot. some crashes feel random, but a repeatable one is to try changing the screen. **Exact steps for others to reproduce the error** - so, load the attached .blend file - it opens two windows. one has an info header in the top. go to that window - in the info menu header, go to the Screens dropdown and try changing the screen to animation. - if it goes well, it should crash like mine. the attached file is uploaded instead to http://urchn.org/misc/a1s51packed.blend thanks!!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by bassam kurdali 2014-01-20 20:59:06 +01:00
Author
Member

Added subscriber: @BassamKurdali

Added subscriber: @BassamKurdali

Added subscriber: @mont29

Added subscriber: @mont29

What a file!

Crash confirmed, happens in drawDispList_nobackface(), a curve object has a NULL curve_cache…

What a file! Crash confirmed, happens in drawDispList_nobackface(), a curve object has a NULL curve_cache…

Attaching much simplified file which demonstrates the issue. Fix will come soon, stay tuned!

Attaching much simplified file which demonstrates the issue. Fix will come soon, stay tuned!

This issue was referenced by blender/blender-addons-contrib@2a76656976

This issue was referenced by blender/blender-addons-contrib@2a7665697637810515fb3620dad19c72f1c13e13

This issue was referenced by 2a76656976

This issue was referenced by 2a7665697637810515fb3620dad19c72f1c13e13

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2a76656976.

Closed by commit 2a76656976.
Author
Member

woohoo, thanks sergey!

woohoo, thanks sergey!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38295
No description provided.